--- a/php_alused/form/index.html
+++ b/php_alused/form/index.html
@@ -7,15 +7,14 @@
 <body>
     <form method="get" action="vormi_tootlus.php">
         <p>
-            <label>Nimi: </label>
-            <input type="text" name="nimi">
+            <label>Kera raadius: </label>
+            <label>
+                <input type="text" name="nimi">
+            </label>
         </p>
+
         <p>
-            <label>Parool: </label>
-            <input type="password" name="parool">
-        </p>
-        <p>
-            <input type="submit" value="Saada!">
+            <input type="submit" value="Arvuta!">
         </p>
     </form>
 </body>
